# opengltemplate

./: CMakeLists.txt
include/: init.hpp  window.hpp
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: init.cpp  main.cpp  window.cpp
